@@ -54,6 +54,7 @@ Bugs Fixed in 3.6.0:
 * JEXL-441:     Tokenization error if "\n" in template expression.
 * JEXL-439:     When using reference capture, incorrect scoping when local variable redefines a captured symbo
 * JEXL-437:     Semicolons actually not optional between function calls on separate lines
+* JEXL-446:     ClassTool module inspection is too strict
 
 
 ========================================================================================================================
